# TagFS

./: .gitignore  README.md  TagFS.cabal  exec  run  stack.yaml
Notes/: System.Fuse.md  bezak.md  bloehdorn_volkel.md  fuse.md  persistent.md  references.md
app/: Main.hs
docs/: Install.md
src/: DbTinker.hs  Debug.hs  Device.hs  Dir.hs  Entry.hs  File.hs  FileStat.hs  Find.hs  FuseOps.hs  HdbcDb.hs  InMem.hs  Insert.hs  Lib.hs  Model.hs  Node.hs  Parse.hs  ReadDir.hs  Remove.hs  Stat.hs  Tag.hs  Types.hs
src/DB/: Base.hs  Create.hs  Exists.hs  Find.hs  Insert.hs  Model.hs  Read.hs  Row.hs  Write.hs
src/DataStore/: Create.hs  Find.hs  Insert.hs  Model.hs
src/Dir/: Base.hs  Create.hs  Read.hs
src/File/: Base.hs  Create.hs  Remove.hs  Rename.hs  Util.hs  Version.hs  Write.hs
src/Other/: Lib.hs
src/Stat/: Base.hs  File.hs
